<resources>
    <string name="app_name">loginPIM</string>
    <string name="username_input">Username</string>
    <string name="password_input">Password</string>
    <string name="login_btn">Login</string>
    <string name="twitter_login">twitterLogin</string>
    <string name="login_instagram">login instagram</string>
    <string name="login_facebook">login facebook</string>
    <string name="register_here_placeholder">Register Here</string>
    <string name="loading_msg">loading please wait ...</string>
    <string name="image_description">logo of my application</string>
    <string name="submit_register">SUBMIT</string>
    <string name="phone_numb">Phone Numb</string>
    <string name="email">Email</string>
</resources>
