<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Activities.SignInActivity">


    <EditText
        android:id="@+id/editText4"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/editText"
        android:layout_alignStart="@+id/editText3"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="35dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username_input"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:textColor="@color/background"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/editText"

        android:layout_alignBottom="@+id/cardView"
        android:layout_marginStart="-1dp"

        android:layout_marginBottom="76dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="@color/background"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/editText4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/logo"
        android:textColor="@color/background"
        android:contentDescription="@string/image_description" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="44dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:textColor="@color/background"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/editText3"
        android:layout_alignStart="@+id/editText"

        android:layout_marginStart="-1dp"

        android:layout_marginBottom="21dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/phone_numb"
        android:inputType="textPassword"
        android:textColor="@color/background"

        android:importantForAutofill="no" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginBottom="86dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/cardView"
            android:layout_alignTop="@+id/cardView">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/aladin"
                android:text="@string/submit_register"
                android:textColor="@color/background"
                android:textSize="18sp"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignStart="@+id/imageView"

        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/twitter"
            android:contentDescription="@string/twitter_login" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/instagram"
            android:contentDescription="@string/login_instagram" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/facebook"
            android:contentDescription="@string/login_facebook" />
    </LinearLayout>




</RelativeLayout>
